Fixes the spacing issue for lets talk

--- a/wp-content/themes/multunus/sass/custom/_typography.scss
+++ b/wp-content/themes/multunus/sass/custom/_typography.scss
@@ -33,7 +33,7 @@ h1 {
 }
 
 h2 {
-  font-size: 34px;
+  font-size: 32px;
   font-weight: 400;
   line-height: 51.55px;
 }
